{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 11,
  "lineage": "7e4a3364-2cad-abc5-acb8-4544916f5928",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07b301a23def3266d",
            "arn": "arn:aws:ec2:ap-south-1:605134452604:instance/i-0e26f3cea8360662b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e26f3cea8360662b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "elk-stack-server_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07e5f4effd982dcaa"
              }
            ],
            "primary_network_interface_id": "eni-07e5f4effd982dcaa",
            "private_dns": "ip-172-31-21-169.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.169",
            "public_dns": "ec2-3-7-37-102.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.37.102",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:605134452604:key/81f437a5-c05d-44e2-a5c4-f7f34ca0e3ee",
                "throughput": 125,
                "volume_id": "vol-02407fa085e50f8f5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07ba3d79be4efe491",
            "tags": {
              "Name": "elk-instance",
              "Project": "elk-stack"
            },
            "tags_all": {
              "Name": "elk-instance",
              "Project": "elk-stack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08607efbb7a2850de"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "i-0e26f3cea8360662b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group/sg-0d6a286c502643814",
            "description": "Security group for elk stack",
            "egress": [],
            "id": "sg-0d6a286c502643814",
            "ingress": [],
            "name": "elk-stack-sg",
            "name_prefix": "",
            "owner_id": "605134452604",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk-stack-sg",
              "Project": "elk-stack"
            },
            "tags_all": {
              "Name": "elk-stack-sg",
              "Project": "elk-stack"
            },
            "timeouts": null,
            "vpc_id": "vpc-06584cc97d59720ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sg-0d6a286c502643814",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-057d34312563c62f4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-057d34312563c62f4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-057d34312563c62f4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-057d34312563c62f4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ElasticSearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0b53011dde8c290f2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9200,
            "id": "sgr-0b53011dde8c290f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-0b53011dde8c290f2",
            "tags": null,
            "tags_all": {},
            "to_port": 9200
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0b53011dde8c290f2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0143d1fd40b9f3464",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0143d1fd40b9f3464",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-0143d1fd40b9f3464",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0143d1fd40b9f3464",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0eebab774f5f6506a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0eebab774f5f6506a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-0eebab774f5f6506a",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0eebab774f5f6506a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-06cf3e69330e977fe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5601,
            "id": "sgr-06cf3e69330e977fe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-06cf3e69330e977fe",
            "tags": null,
            "tags_all": {},
            "to_port": 5601
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-06cf3e69330e977fe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0eeb75f1b643dbc55",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5044,
            "id": "sgr-0eeb75f1b643dbc55",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-0eeb75f1b643dbc55",
            "tags": null,
            "tags_all": {},
            "to_port": 5044
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0eeb75f1b643dbc55",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-04b4bc87dc72c9be1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04b4bc87dc72c9be1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-04b4bc87dc72c9be1",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-04b4bc87dc72c9be1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_API_port_Elastic_Logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134452604:security-group-rule/sgr-0a0e7b2750d82a02b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 9600,
            "id": "sgr-0a0e7b2750d82a02b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0d6a286c502643814",
            "security_group_rule_id": "sgr-0a0e7b2750d82a02b",
            "tags": null,
            "tags_all": {},
            "to_port": 9600
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "605134452604",
            "id": "sgr-0a0e7b2750d82a02b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.elk_sg"
          ]
        }
      ]
    }
  ]
}